--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     <section id="project">
         <div class="projects">
             <div class="project mx-auto d-flex mt-5 alin-items-center justify-content-center">
-                <div class="detail">
+                <div class="detail" data-aos="fade-right">
                     <h3>E-Commerce Website</h3>
                     <p class="info">
                         It is a full stack e-commerce webiste built in spring-boot, hibernate, jsp and mysql.
                         In that you can perform different opernations
                     </p>
                 </div>
-                <div class="img ms-5">
+                <div class="img ms-5" data-aos="fade-left">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnvnXtPWqbyEP7ZIv9xSqZwxrncy7SxFdpcQ&s" alt="">
                 </div>
             </div>
@@ -158,6 +158,9 @@
      <div class="container w-50 mx-auto text-center shadow">
         <p>&copy; All Rights reserved ,2025</p>
      </div>
+    <script>
+        AOS.init();
+    </script>
     <!-- scroll animation -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- bootstrap js -->
