--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     <section id="project">
         <div class="projects">
             <div class="project mx-auto d-flex mt-5 alin-items-center justify-content-center">
-                <div class="detail" data-aos="fade-right">
+                <div class="detail">
                     <h3>E-Commerce Website</h3>
                     <p class="info">
                         It is a full stack e-commerce webiste built in spring-boot, hibernate, jsp and mysql.
                         In that you can perform different opernations
                     </p>
                 </div>
-                <div class="img ms-5" data-aos="fade-left">
+                <div class="img ms-5">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnvnXtPWqbyEP7ZIv9xSqZwxrncy7SxFdpcQ&s" alt="">
                 </div>
             </div>
